EIDOMNI-136: add proof of possession creation and verification functionality