@@ -42,11 +42,12 @@ public class Ed25519Utils {
     }
 
     /**
-     * The encoding of an Ed25519 public key MUST start with the two-byte prefix 0xed01 (the varint expression of 0xed),
+     * <p>
+     * The encoding of an Ed25519 public key MUST start with the two-byte prefix 0xed01 (the variant expression of 0xed),
      * followed by the 32-byte public key data. The resulting 34-byte value MUST then be encoded using the base-58-btc alphabet,
      * and then prepended with the <a href="https://www.w3.org/TR/controller-document/#multibase-0">base-58-btc Multibase header (z)</a>.
-     * <p>
-     * See <a href="https://www.w3.org/TR/controller-document/#Multikey">Multikey</a>
+     * </p>
+     * <p>See <a href="https://www.w3.org/TR/controller-document/#Multikey">Multikey</a></p>
      *
      * @param publicKeyEncoded
      * @return
@@ -60,4 +61,49 @@ public class Ed25519Utils {
         buff.put(Arrays.copyOfRange(publicKeyEncoded, publicKeyEncoded.length - 32, publicKeyEncoded.length));
         return 'z' + Base58.encode(buff.array());
     }
+
+    /**
+     * <p>
+     * Decodes a multibase key into the 32-byte public key data.
+     * The multikey has the prefix 'z' followed by 34-byte data encoded using the base-58-btc alphabet.
+     * Of those data bytes, the first 2 denote the variant of the key and the rest being the key data.
+     * </p>
+     * <p>See <a href="https://www.w3.org/TR/controller-document/#Multikey">Multikey</a></p>
+     *
+     * @param multibase is a publicKey encoded as multibase
+     * @return publicKey
+     */
+    public static byte[] decodeMultibase(String multibase) throws NoSuchAlgorithmException, InvalidKeySpecException {
+        if (multibase.charAt(0) != 'z') {
+            throw new IllegalArgumentException();
+        }
+        multibase = multibase.substring(1);
+        var buf = Base58.decode(multibase);
+
+        // See https://github.com/multiformats/multicodec/blob/master/table.csv#L98
+        if (buf[0] == (byte)0xed && buf[1] == (byte)0x01) {// Ed25519Pub/ed25519-pub is a draft code tagged "key" and described by: Ed25519 public key.
+            return Arrays.copyOfRange(buf, 2, buf.length);
+        }
+        throw new IllegalArgumentException();
+    }
+
+    /*
+    public static PrivateKey getPrivateKeyFromJKS(InputStream jksFile, String password, String alias, String keyPassword) throws CertificateException, IOException, NoSuchAlgorithmException, UnrecoverableEntryException, KeyStoreException, KeyException {
+        var provider = Security.getProvider(BouncyCastleProvider.PROVIDER_NAME);
+        // CAUTION Calling KeyStore.getInstance("JKS") may cause:
+        //         "java.security.NoSuchAlgorithmException: no such algorithm: EdDSA for provider SUN"
+        KeyStore keyStore = KeyStore.getInstance("PKCS12", provider);
+        char[] pass = null;
+        if (password != null) {
+            pass = password.toCharArray();
+        }
+        keyStore.load(jksFile, pass); // java.io.IOException: keystore password was incorrect
+
+        // CAUTION Flexible constructors is a preview feature and is disabled by default. (use --enable-preview to enable flexible constructors)
+        //this(createFromKeyStore(keyStore, alias, keyPassword));
+        var obj = createFromKeyStore(keyStore, alias, keyPassword);
+        var keyPair = obj.keyPair;
+        return keyPair.getPrivate();
+    }
+     */
 }
